// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shinkansen-cogs/components/input/email <Input /> With additional props renders 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  onChange={[Function]}
  readOnly={true}
  required={true}
  type="email"
/>
`;

exports[`shinkansen-cogs/components/input/email <Input /> With required props renders 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={false}
  name="MOCK NAME"
  onChange={[Function]}
  readOnly={false}
  required={false}
  type="email"
/>
`;
